redhat/rhoai/v3.5/base/05-mcp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-mcp-server
  labels:
    opendatahub.io/dashboard: "true"
  annotations:
    openshift.io/display-name: "MCP Server"
