redhat/rhoai/v3.5/base/05-mcp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openshift-mcp-server-route
  namespace: openshift-mcp-server
spec:
  parentRefs:
    - name: mcp-gateway
      namespace: mcp-system
      sectionName: mcp
  rules:
    - backendRefs:
        - name: openshift-mcp-server
          port: 8080
